更新jar