@@ -1008,9 +1008,9 @@ public class ImageUtil {
 			// 计算比例
 			if ((bi.getHeight() > height) || (bi.getWidth() > width)) {
 				if (bi.getHeight() > bi.getWidth()) {
-					ratio = (new Integer(height)).doubleValue() / bi.getHeight();
+					ratio = Integer.valueOf(height).doubleValue() / bi.getHeight();
 				} else {
-					ratio = (new Integer(width)).doubleValue() / bi.getWidth();
+					ratio =Integer.valueOf(width).doubleValue() / bi.getWidth();
 				}
 				AffineTransformOp op = new AffineTransformOp(AffineTransform.getScaleInstance(ratio, ratio), null);
 				itemp = op.filter(bi, null);
